Add EQUATOR explanation block to research section

--- a/index.html
+++ b/index.html
@@ -122,6 +122,23 @@
 
   <section id="research" class="py-20">
     <div class="mx-auto max-w-6xl px-4">
+      <div class="rounded-2xl border border-slate-200 p-6">
+        <h2 class="text-2xl font-semibold">EQUATOR: Evaluating LLM performance</h2>
+        <div class="mt-4 grid md:grid-cols-3 gap-6 text-slate-700">
+          <div>
+            <div class="text-slate-500 text-xs uppercase tracking-wider">What it is</div>
+            <p class="mt-1">A deterministic framework for evaluating LLMs, focusing on the factual accuracy and reasoning ability of their answers to open‑ended questions.</p>
+          </div>
+          <div>
+            <div class="text-slate-500 text-xs uppercase tracking-wider">How it works</div>
+            <p class="mt-1">Pairs questions with human‑verified answers via a vector database, and employs smaller, locally hosted LLMs to reduce reliance on human evaluators.</p>
+          </div>
+          <div>
+            <div class="text-slate-500 text-xs uppercase tracking-wider">Goal</div>
+            <p class="mt-1">Provide a robust, scalable alternative to traditional multiple‑choice benchmarks that fall short for open‑ended reasoning.</p>
+          </div>
+        </div>
+      </div>
       <div class="grid md:grid-cols-5 gap-10 items-start">
         <div class="md:col-span-3">
           <h2 class="text-2xl font-semibold">Research</h2>
