Add pre-seed/angel funding and hiring messaging to Invest/Contact

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-6">
           <div>
             <h2 class="text-2xl font-semibold">Investors & partners</h2>
-            <p class="mt-3 text-slate-700 max-w-2xl">We're in stealth, partnering with teams who believe better AI starts with better measurement. If you invest in reasoning, interpretability, or AI safety, let's talk.</p>
+            <p class="mt-3 text-slate-700 max-w-2xl">We're pre‑seed and actively raising angel funding, partnering with teams who believe better AI starts with better measurement. If you invest in reasoning, interpretability, or AI safety, let's talk.</p>
           </div>
           <div class="flex items-center gap-3">
             <a href="mailto:invest@eqlabs.ai" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium">invest@eqlabs.ai</a>
@@ -245,6 +245,17 @@
             <div class="mt-1 font-medium">arXiv + blind studies</div>
           </div>
         </div>
+        <div class="mt-6 rounded-xl border border-slate-200 p-6">
+          <div class="md:flex md:items-center md:justify-between">
+            <div>
+              <h3 class="font-medium">We're hiring</h3>
+              <p class="mt-2 text-slate-700 text-sm max-w-3xl">We're building a larger team of AI Researchers, Engineers, and Graduate Students to advance deterministic evaluation. If you're mission‑driven and deeply curious about reasoning, we'd love to hear from you.</p>
+            </div>
+            <div class="mt-4 md:mt-0">
+              <a href="mailto:info@eqlabs.ai" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium">Email your resume</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -254,7 +265,7 @@
       <div class="grid md:grid-cols-2 gap-10 items-start">
         <div>
           <h2 class="text-2xl font-semibold">Get in touch</h2>
-          <p class="mt-3 text-slate-700">Interested in collaborating, contributing, or investing? We're friendly, fast, and focused.</p>
+          <p class="mt-3 text-slate-700">We're pre‑seed and actively raising angel funding. We're also growing a team of AI Researchers, Engineers, and Graduate Students. Interested in collaborating, contributing, investing, or joining? We’re friendly, fast, and focused.</p>
           <ul class="mt-4 space-y-2 text-slate-700">
             <li><span class="text-slate-500">Email:</span> <a class="hover:underline" href="mailto:info@eqlabs.ai">info@eqlabs.ai</a></li>
             <li><span class="text-slate-500">Investors:</span> <a class="hover:underline" href="mailto:invest@eqlabs.ai">invest@eqlabs.ai</a></li>
