Point LinkedIn links to groups page

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <li><span class="text-slate-500">Email:</span> <a class="hover:underline" href="mailto:info@eqlabs.ai">info@eqlabs.ai</a></li>
             <li><span class="text-slate-500">Investors:</span> <a class="hover:underline" href="mailto:invest@eqlabs.ai">invest@eqlabs.ai</a></li>
             <li><span class="text-slate-500">Paper:</span> <a class="hover:underline" target="_blank" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator (arXiv)</a></li>
-            <li><span class="text-slate-500">Community:</span> <a class="hover:underline" href="#" target="_blank">LinkedIn Research Group</a></li>
+            <li><span class="text-slate-500">Community:</span> <a class="hover:underline" href="https://www.linkedin.com/groups/" target="_blank">LinkedIn Research Group</a></li>
           </ul>
         </div>
         <div class="rounded-2xl border border-slate-200 p-6">
@@ -288,7 +288,7 @@
       <div>&copy; <span id="y"></span> EQLabs.ai — The Equator Intelligence Lab</div>
       <div class="flex items-center gap-4">
         <a class="hover:underline" target="_blank" href="https://arxiv.org/abs/2501.00257">arXiv</a>
-        <a class="hover:underline" href="#">LinkedIn</a>
+        <a class="hover:underline" href="https://www.linkedin.com/groups/" target="_blank">LinkedIn</a>
         <a class="hover:underline" href="mailto:info@eqlabs.ai">Email</a>
       </div>
     </div>
