--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <a href="#about" class="hover:text-black">About</a>
           <a href="#research" class="hover:text-black">Research</a>
           <a href="#video" class="hover:text-black">Video</a>
+          <a href="#blog" class="hover:text-black">Blog</a>
           <a href="#benchmark" class="hover:text-black">Benchmark</a>
           <a href="#invest" class="hover:text-black">Invest</a>
           <a href="#contact" class="hover:text-black">Contact</a>
@@ -98,6 +99,19 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section id="blog" class="py-20 border-t border-slate-200">
+    <div class="mx-auto max-w-6xl px-4">
+      <h2 class="text-2xl font-semibold">From our blog</h2>
+      <p class="mt-2 text-slate-700">Selected posts from Ray Bernard's Fine‑Tuned Journal.</p>
+      <div class="mt-6 grid md:grid-cols-3 gap-4 text-sm">
+        <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300" target="_blank" href="https://raymondbernard.github.io/">LLM Hallucinations — Reducing hallucinations with Reflection LLM and vector stores</a>
+        <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300" target="_blank" href="https://raymondbernard.github.io/">Moa + Star = Better Open Source LLM (part 3)</a>
+        <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300" target="_blank" href="https://raymondbernard.github.io/">Open‑WebUI Mixture of Agents (part 2)</a>
+      </div>
+      <a class="mt-6 inline-block text-sm text-slate-700 hover:underline" target="_blank" href="https://raymondbernard.github.io/">See all posts ↗</a>
     </div>
   </section>
 
