Embed raymondbernard.github.io blog via responsive iframe in #blog section

--- a/index.html
+++ b/index.html
@@ -105,13 +105,11 @@
   <section id="blog" class="py-20 border-t border-slate-200">
     <div class="mx-auto max-w-6xl px-4">
       <h2 class="text-2xl font-semibold">From our blog</h2>
-      <p class="mt-2 text-slate-700">Selected posts from Ray Bernard's Fine‑Tuned Journal.</p>
-      <div class="mt-6 grid md:grid-cols-3 gap-4 text-sm">
-        <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300" target="_blank" href="https://raymondbernard.github.io/">LLM Hallucinations — Reducing hallucinations with Reflection LLM and vector stores</a>
-        <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300" target="_blank" href="https://raymondbernard.github.io/">Moa + Star = Better Open Source LLM (part 3)</a>
-        <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300" target="_blank" href="https://raymondbernard.github.io/">Open‑WebUI Mixture of Agents (part 2)</a>
+      <p class="mt-2 text-slate-700">Embedded feed from Ray Bernard's Fine‑Tuned Journal.</p>
+      <div class="mt-6 h-[800px] w-full rounded-xl overflow-hidden border border-slate-200">
+        <iframe class="w-full h-full" src="https://raymondbernard.github.io/" title="Ray Bernard's Fine‑Tuned Journal" frameborder="0"></iframe>
       </div>
-      <a class="mt-6 inline-block text-sm text-slate-700 hover:underline" target="_blank" href="https://raymondbernard.github.io/">See all posts ↗</a>
+      <a class="mt-6 inline-block text-sm text-slate-700 hover:underline" target="_blank" href="https://raymondbernard.github.io/">Open blog in a new tab ↗</a>
     </div>
   </section>
 
