--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="#about" class="hover:text-black">About</a>
           <a href="#research" class="hover:text-black">Research</a>
           <a href="#video" class="hover:text-black">Video</a>
-          <a href="#blog" class="hover:text-black">Blog</a>
+          <a href="/blog/" class="hover:text-black">Blog</a>
           <a href="#benchmark" class="hover:text-black">Benchmark</a>
           <a href="#invest" class="hover:text-black">Invest</a>
           <a href="#contact" class="hover:text-black">Contact</a>
