--- a/index.html
+++ b/index.html
@@ -105,11 +105,26 @@
   <section id="blog" class="py-20 border-t border-slate-200">
     <div class="mx-auto max-w-6xl px-4">
       <h2 class="text-2xl font-semibold">From our blog</h2>
-      <p class="mt-2 text-slate-700">Embedded feed from Ray Bernard's Fine‑Tuned Journal.</p>
-      <div class="mt-6 h-[800px] w-full rounded-xl overflow-hidden border border-slate-200">
-        <iframe class="w-full h-full" src="https://raymondbernard.github.io/" title="Ray Bernard's Fine‑Tuned Journal" frameborder="0"></iframe>
+      <p class="mt-2 text-slate-700">Research notes and updates from the team.</p>
+      <div class="mt-6 grid md:grid-cols-3 gap-4 text-sm">
+        <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300" href="/blog/posts/llm-hallucinations.html">
+          <div class="text-xs uppercase tracking-wider text-slate-500">LLM evaluation</div>
+          <div class="mt-1 font-medium">LLM Hallucinations</div>
+          <div class="mt-1 text-slate-600">Reducing hallucinations with Reflection LLM and vector stores.</div>
+          <div class="mt-3 text-xs text-slate-500">Sep 8, 2024</div>
+        </a>
+        <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300" href="/blog/posts/moa-star-part-3.html">
+          <div class="text-xs uppercase tracking-wider text-slate-500">Open source LLMs</div>
+          <div class="mt-1 font-medium">Moa + Star = Better Open Source LLM (part 3)</div>
+          <div class="mt-1 text-slate-600">Experiments and lessons learned.</div>
+        </a>
+        <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300" href="/blog/posts/mix-agents-part-2.html">
+          <div class="text-xs uppercase tracking-wider text-slate-500">Mixture of Agents</div>
+          <div class="mt-1 font-medium">Open‑WebUI Mixture of Agents (part 2)</div>
+          <div class="mt-1 text-slate-600">Multi‑agent workflows and evaluation pathways.</div>
+        </a>
       </div>
-      <a class="mt-6 inline-block text-sm text-slate-700 hover:underline" target="_blank" href="https://raymondbernard.github.io/">Open blog in a new tab ↗</a>
+      <a class="mt-6 inline-block text-sm text-slate-700 hover:underline" href="/blog/">See all posts ↗</a>
     </div>
   </section>
 
