--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en" class="scroll-smooth">
 
@@ -60,8 +59,7 @@
             <span class="rounded-full border border-slate-300 px-3 py-1">Deterministic evaluation</span>
             <span class="rounded-full border border-slate-300 px-3 py-1">Reasoning benchmarks</span>
             <span class="rounded-full border border-slate-300 px-3 py-1">Human‑aligned metrics</span>
-          </div>
-          <div class="mt-8 rounded-2xl border border-slate-200 p-6">
+          </div>          <div class="mt-8 rounded-2xl border border-slate-200 p-6">
             <h2 class="text-xl font-semibold">EQUATOR: Evaluating LLM performance</h2>
             <div class="mt-4 grid md:grid-cols-3 gap-6 text-slate-700">
               <div>
@@ -102,6 +100,7 @@
     </div>
   </section>
 
+  <!-- Blog section (temporarily disabled)
   <section id="blog" class="py-20 border-t border-slate-200">
     <div class="mx-auto max-w-6xl px-4">
       <h2 class="text-2xl font-semibold">From our blog</h2>
@@ -127,6 +126,7 @@
       <a class="mt-6 inline-block text-sm text-slate-700 hover:underline" href="/blog/">See all posts ↗</a>
     </div>
   </section>
+  -->
 
   <section id="about" class="py-20 border-t border-slate-200">
     <div class="mx-auto max-w-6xl px-4">
