Add Founders Circle press page and nav links; invite early investors and GPU donations (1-2 gens behind)

--- a/eqlabs.html
+++ b/eqlabs.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>EQLabs.ai — The EQ Lab</title>
   <meta name="description"
     content="EQLabs.ai builds deterministic frameworks to evaluate and improve LLM reasoning. EQUATOR Evaluator on arXiv. Collaborating with Columbia University and the Vector Institute." />
@@ -28,6 +29,7 @@
           <a href="#about" class="hover:text-black">About</a>
           <a href="#research" class="hover:text-black">Research</a>
           <a href="#video" class="hover:text-black">Video</a>
+          <a href="/founders-circle.html" class="hover:text-black">Founders Circle</a>
           <a href="#benchmark" class="hover:text-black">Benchmark</a>
           <a href="#invest" class="hover:text-black">Invest</a>
           <a href="#contact" class="hover:text-black">Contact</a>
