--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>EQLabs.ai — The EQ Lab</title>
   <meta name="description"
     content="EQLabs.ai builds deterministic frameworks to evaluate and improve LLM reasoning. EQUATOR Evaluator on arXiv. Collaborating with Columbia University and the Vector Institute." />
@@ -28,6 +29,7 @@
           <a href="#research" class="hover:text-black">Research</a>
           <a href="#video" class="hover:text-black">Video</a>
           <a href="/blog/" class="hover:text-black">Blog</a>
+          <a href="/founders-circle.html" class="hover:text-black">Founders Circle</a>
           <a href="#benchmark" class="hover:text-black">Benchmark</a>
           <a href="#invest" class="hover:text-black">Invest</a>
           <a href="#contact" class="hover:text-black">Contact</a>
@@ -279,7 +281,7 @@
               <p class="mt-2 text-slate-700 text-sm max-w-3xl">We're building a larger team of AI Researchers, Engineers, and Graduate Students to advance deterministic evaluation. If you're mission‑driven and deeply curious about reasoning, we'd love to hear from you.</p>
             </div>
             <div class="mt-4 md:mt-0">
-              <a href="mailto:info@eqlabs.ai" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium">Email your resume</a>
+              <a href="mailto:info@eqlabs.ai" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">Email Your Resume</a>
             </div>
           </div>
         </div>
