Update attribution: founded from alumni research (Columbia, Vector) - not formal collaborations

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>EQLabs.ai — The EQ Lab</title>
   <meta name="description"
-    content="EQLabs.ai builds deterministic frameworks to evaluate and improve LLM reasoning. EQUATOR Evaluator on arXiv. Collaborating with Columbia University and the Vector Institute." />
+    content="EQLabs.ai builds deterministic frameworks to evaluate and improve LLM reasoning. EQUATOR Evaluator on arXiv. Founded from research and contributions by alumni of Columbia University and the Vector Institute." />
   <meta property="og:title" content="EQLabs.ai — The Equator Intelligence Lab" />
   <meta property="og:description" content="Deterministic evaluation of AI reasoning. EQUATOR Evaluator (arXiv)." />
   <meta property="og:type" content="website" />
@@ -138,7 +138,7 @@
           <p class="mt-4 text-slate-700">EQLabs.ai operates at the intersection of <span class="font-medium">AI
               reasoning, evaluation, and alignment</span>. We develop reproducible methods to measure how models
             think—not just how they sound.</p>
-          <p class="mt-3 text-slate-600">Founded in collaboration with <span class="font-medium">Columbia
+          <p class="mt-3 text-slate-600">Founded from research and contributions by alumni of <span class="font-medium">Columbia
               University</span> and the <span class="font-medium">Vector Institute</span>. Based in NYC; growing a
             global network via our LinkedIn research community.</p>
         </div>
