Homepage: add Press section linking to Founders Circle release

--- a/index.html
+++ b/index.html
@@ -207,6 +207,21 @@
     </div>
   </section>
 
+  <section id="press" class="py-20 border-t border-slate-200">
+    <div class="mx-auto max-w-6xl px-4">
+      <h2 class="text-2xl font-semibold">Press</h2>
+      <p class="mt-2 text-slate-700">Latest announcements and media.</p>
+      <div class="mt-6 grid md:grid-cols-2 gap-4 text-sm">
+        <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300 block" href="/founders-circle.html">
+          <div class="text-xs uppercase tracking-wider text-slate-500">Press Release</div>
+          <div class="mt-1 font-medium">EQLabs Launches Founders Circle</div>
+          <div class="mt-1 text-slate-600">Join early builders and backers; we’re pre‑seed and welcoming GPU donations 1–2 generations behind.</div>
+          <div class="mt-3 text-xs text-slate-500">October 11, 2025</div>
+        </a>
+      </div>
+    </div>
+  </section>
+
   <section id="benchmark" class="py-20">
     <div class="mx-auto max-w-6xl px-4">
       <div class="grid md:grid-cols-2 gap-10 items-start">
