Add demo pages and wire CTAs

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           </ul>
           <p class="mt-4 text-slate-600 text-sm">We log all trials with dataset versioning, flags, and per‑criterion outcomes for auditability.</p>
           <div class="mt-4">
-            <a href="mailto:info@eqlabs.ai?subject=Benchmark%20demo%20request" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">Request a demo</a>
+            <a href="/demo.html" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">Request a demo</a>
           </div>
         </div>
       </div>
@@ -286,7 +286,7 @@
           <div class="flex items-center gap-3">
             <a href="mailto:invest@eqlabs.ai" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium">invest@eqlabs.ai</a>
             <a href="#contact" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">Contact</a>
-            <a href="mailto:info@eqlabs.ai?subject=Benchmark%20demo%20request" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">Request a demo</a>
+            <a href="/demo.html" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">Request a demo</a>
           </div>
         </div>
         <div class="mt-6 grid md:grid-cols-3 gap-3 text-sm">
