--- a/founders-circle.html
+++ b/founders-circle.html
@@ -91,7 +91,7 @@
             <a href="mailto:founders@eqlabs.ai" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium">founders@eqlabs.ai</a>
             <a href="mailto:press@eqlabs.ai" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">press@eqlabs.ai</a>
             <a href="mailto:invest@eqlabs.ai" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">invest@eqlabs.ai</a>
-            <a href="mailto:info@eqlabs.ai?subject=Benchmark%20demo%20request" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">Request a demo</a>
+            <a href="/demo.html" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">Request a demo</a>
           </div>
         </div>
 
