Publish founders-circle update

--- a/founders-circle.html
+++ b/founders-circle.html
@@ -48,7 +48,7 @@
 
         <div class="rounded-2xl border border-slate-200 p-6">
           <h2 class="text-xl font-semibold">Why join the Founders Circle</h2>
-          <ul class="mt-3 list-disc list-inside text-slate-700">
+          <ul class="mt-3 list-disc pl-5 text-slate-700">
             <li><span class="font-medium">Direct product influence</span>: Priority access to private builds, research notes, and roadmap reviews.</li>
             <li><span class="font-medium">Early technical edge</span>: Experimental features, performance benchmarks, and integration support.</li>
             <li><span class="font-medium">Community of doers</span>: Collaborate with kindred spirits who ship fast and think long-term.</li>
