--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>EQLabs.ai — The EQ Lab</title>
+  <title>EQLabs.ai — The Equator Intelligence Lab</title>
   <meta name="description"
     content="EQLabs.ai builds deterministic frameworks to evaluate and improve LLM reasoning. EQUATOR Evaluator on arXiv. Founded from research and contributions by alumni of Columbia University and the Vector Institute." />
   <meta property="og:title" content="EQLabs.ai — The Equator Intelligence Lab" />
@@ -61,22 +61,23 @@
             <span class="rounded-full border border-slate-300 px-3 py-1">Deterministic evaluation</span>
             <span class="rounded-full border border-slate-300 px-3 py-1">Reasoning benchmarks</span>
             <span class="rounded-full border border-slate-300 px-3 py-1">Human‑aligned metrics</span>
-          </div>          <div class="mt-8 rounded-2xl border border-slate-200 p-6">
+          </div>
+          <div class="mt-8 rounded-2xl border border-slate-200 p-6">
             <h2 class="text-xl font-semibold">EQUATOR: Evaluating LLM performance</h2>
             <div class="mt-4 grid md:grid-cols-3 gap-6 text-slate-700">
               <div>
-                <div class="text-slate-500 text-xs uppercase tracking-wider">What it is</div>
-                <p class="mt-1">A deterministic framework for evaluating LLMs, focusing on the factual accuracy and
-                  reasoning ability of their answers to open‑ended questions.</p>
+                <div class="text-slate-500 text-xs uppercase tracking-wider">Overview</div>
+                <p class="mt-1">A deterministic framework for evaluating LLMs, focusing on factual accuracy and the
+                  reasoning quality of answers to open‑ended questions.</p>
               </div>
               <div>
-                <div class="text-slate-500 text-xs uppercase tracking-wider">How it works</div>
-                <p class="mt-1">Pairs questions with human‑verified answers via a vector database, and employs
+                <div class="text-slate-500 text-xs uppercase tracking-wider">Method</div>
+                <p class="mt-1">Pairs questions with human‑verified answers via a vector database and employs
                   smaller, locally hosted LLMs to reduce reliance on human evaluators.</p>
               </div>
               <div>
-                <div class="text-slate-500 text-xs uppercase tracking-wider">Goal</div>
-                <p class="mt-1">Provide a robust, scalable alternative to traditional multiple‑choice benchmarks that
+                <div class="text-slate-500 text-xs uppercase tracking-wider">Objective</div>
+                <p class="mt-1">Provide a robust, scalable alternative to multiple‑choice benchmarks, which
                   fall short for open‑ended reasoning.</p>
               </div>
             </div>
@@ -93,7 +94,7 @@
               beyond fluency bias.</p>
             <div class="mt-4 flex gap-2">
               <a href="https://arxiv.org/abs/2501.00257" target="_blank"
-                class="rounded-full bg-black text-white px-4 py-2 text-sm">Open</a>
+                class="rounded-full bg-black text-white px-4 py-2 text-sm">Open paper</a>
               <a href="#benchmark" class="rounded-full border border-slate-300 px-4 py-2 text-sm">Benchmark</a>
             </div>
           </div>
@@ -225,7 +226,7 @@
         <a class="rounded-xl border border-slate-200 p-4 hover:border-slate-300 block" href="/founders-circle.html">
           <div class="text-xs uppercase tracking-wider text-slate-500">Press Release</div>
           <div class="mt-1 font-medium">EQLabs Launches Founders Circle</div>
-          <div class="mt-1 text-slate-600">Join early builders and backers; we’re pre‑seed and welcoming GPU donations 1–2 generations behind.</div>
+          <div class="mt-1 text-slate-600">Join early builders and backers; we’re pre‑seed and welcoming GPU donations 1–2 generations old.</div>
           <div class="mt-3 text-xs text-slate-500">October 11, 2025</div>
         </a>
       </div>
