Homepage: clarify we are not hiring; recruiting founders (founders@eqlabs.ai)

--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@
         <div class="mt-6 rounded-xl border border-slate-200 p-6">
           <div class="md:flex md:items-center md:justify-between">
             <div>
-              <h3 class="font-medium">Pre‑seed: welcoming investors and research collaborators</h3>
-              <p class="mt-2 text-slate-700 text-sm max-w-3xl">We're not hiring yet. If you invest in reasoning, interpretability, or AI safety—or want to collaborate on research—let's talk.</p>
+              <h3 class="font-medium">Looking for founders</h3>
+              <p class="mt-2 text-slate-700 text-sm max-w-3xl">We are not hiring. We're recruiting founders to build with us on deterministic evaluation. If this is you, let's talk.</p>
             </div>
             <div class="mt-4 md:mt-0">
-              <a href="mailto:invest@eqlabs.ai" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">invest@eqlabs.ai</a>
+              <a href="mailto:founders@eqlabs.ai" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">founders@eqlabs.ai</a>
             </div>
           </div>
         </div>
@@ -324,7 +324,7 @@
       <div class="grid md:grid-cols-2 gap-10 items-start">
         <div>
           <h2 class="text-2xl font-semibold">Get in touch</h2>
-          <p class="mt-3 text-slate-700">We’re pre‑seed and actively raising angel funding. We’re not hiring yet. If you’re an investor or research collaborator interested in deterministic evaluation, we’d love to connect.</p>
+          <p class="mt-3 text-slate-700">We’re pre‑seed and actively raising angel funding. We are not hiring; we’re looking for founders and research collaborators focused on deterministic evaluation. If that’s you, we’d love to connect.</p>
           <ul class="mt-4 space-y-2 text-slate-700">
             <li><span class="text-slate-500">Email:</span> <a class="hover:underline" href="mailto:info@eqlabs.ai">info@eqlabs.ai</a></li>
             <li><span class="text-slate-500">Investors:</span> <a class="hover:underline" href="mailto:invest@eqlabs.ai">invest@eqlabs.ai</a></li>
