feat: publish new site content and SEO scripts; add policies & blog updates

--- a/founders-circle.html
+++ b/founders-circle.html
@@ -1,18 +1,45 @@
-<!doctype html>
-<html lang="en" class="scroll-smooth">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<!DOCTYPE html><html lang="en" class="scroll-smooth"><head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; object-src 'none'; base-uri 'self'; frame-ancestors 'none'; upgrade-insecure-requests">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
   <title>EQLabs.ai — Founders Circle</title>
-  <meta name="description" content="Join the EQLabs Founders Circle — help build the future of open, agentic AI. We are pre-seed and welcoming investors, partners, and GPU donations." />
-  <meta property="og:title" content="EQLabs.ai — Founders Circle" />
-  <meta property="og:description" content="Join our Founders Circle and co-create the future of agentic AI. Pre-seed; open to investment and GPU donations (1–2 generations behind)." />
-  <meta property="og:type" content="article" />
-  <meta property="og:image" content="/og-image.png" />
-  <link rel="icon" href="/favicon.ico" />
+  <meta name="description" content="Join the EQLabs Founders Circle — help build the future of open, agentic AI. We are pre-seed and welcoming investors, partners, and GPU donations.">
+  <meta property="og:title" content="EQLabs.ai — Founders Circle">
+  <meta property="og:description" content="Join our Founders Circle and co-create the future of agentic AI. Pre-seed; open to investment and GPU donations (1–2 generations behind).">
+  <meta property="og:type" content="article">
+  <meta property="og:image" content="https://eqlabs.ai/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="canonical" href="https://eqlabs.ai/founders-circle.html">
+  <script type="application/ld+json">{
+    "@context": "https://schema.org",
+    "@type": "NewsArticle",
+    "headline": "EQLabs Launches Founders Circle to Build the Future of Open, Agentic AI",
+    "datePublished": "2025-10-11",
+    "dateModified": "2025-10-11",
+    "author": {
+      "@type": "Organization",
+      "name": "EQLabs.ai"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "EQLabs.ai",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://eqlabs.ai/favicon.ico"
+      }
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://eqlabs.ai/founders-circle.html"
+    },
+    "image": ["https://eqlabs.ai/og-image.png"],
+    "description": "EQLabs announces the Founders Circle — an invite-only community for builders, researchers, and backers advancing agentic AI. Pre-seed; open to investment and GPU donations."
+  }</script>
+  <link rel="icon" href="/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="/scripts/monitor.js" defer=""></script>
+  <script src="/scripts/gate.js" defer=""></script>
 </head>
 
 <body class="bg-white text-slate-900 antialiased selection:bg-black/10">
@@ -102,18 +129,21 @@
 
   <footer class="py-12 border-t border-slate-200">
     <div class="mx-auto max-w-6xl px-4 flex flex-col md:flex-row items-center justify-between gap-4 text-sm text-slate-600">
-      <div>&copy; <span id="y"></span> EQLabs.ai — The Equator Intelligence Lab</div>
+      <div>© <span id="y"></span> EQLabs.ai — The Equator Intelligence Lab</div>
       <div class="flex items-center gap-4">
-        <a class="hover:underline" target="_blank" href="https://arxiv.org/abs/2501.00257">arXiv</a>
-        <a class="hover:underline" target="_blank" href="https://www.linkedin.com/groups/">LinkedIn</a>
+        <a class="hover:underline" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">arXiv</a>
+        <a class="hover:underline" target="_blank" rel="noopener" href="https://www.linkedin.com/groups/">LinkedIn</a>
         <a class="hover:underline" href="mailto:info@eqlabs.ai">Email</a>
+        <a class="hover:underline" href="/privacy.html">Privacy</a>
+        <a class="hover:underline" href="/terms.html">Terms</a>
       </div>
     </div>
   </footer>
 
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
-</body>
-
-</html>
 
 
+
+
+
+</body></html>
