--- a/404.html
+++ b/404.html
@@ -1,27 +1,38 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Page not found — EQLabs.ai</title>
-  <meta http-equiv="refresh" content="2; url=/" />
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="description" content="404 — Page not found. Redirecting to the EQLabs.ai homepage.">
+  <link rel="canonical" href="https://eqlabs.ai/404.html">
+  <meta property="og:title" content="404 — Page not found">
+  <meta property="og:description" content="Redirecting to the EQLabs.ai homepage.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://eqlabs.ai/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta http-equiv="refresh" content="2; url=/">
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; background: #fff; color: #0f172a; }
     .wrap { max-width: 640px; margin: 20vh auto; padding: 0 16px; text-align: center; }
     .btn { display: inline-block; margin-top: 16px; padding: 10px 16px; border-radius: 999px; background: #000; color: #fff; text-decoration: none; }
   </style>
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/favicon.ico">
+  <script src="/scripts/gate.js" defer=""></script>
 </head>
 <body>
   <div class="wrap">
     <h1>404 — Not Found</h1>
     <p>Redirecting you to the EQLabs.ai homepage…</p>
     <a class="btn" href="/">Go to homepage</a>
+    <div style="margin-top:10px;font-size:12px;color:#475569">
+      <a href="/privacy.html">Privacy</a> · <a href="/terms.html">Terms</a>
+    </div>
   </div>
   <script>
     setTimeout(function(){ window.location.href = '/'; }, 1500);
   </script>
-  </body>
-  </html>
+  
+  
 
 
+</body></html>
