--- a/demo.html
+++ b/demo.html
@@ -1,18 +1,18 @@
-<!doctype html>
-<html lang="en" class="scroll-smooth">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<!DOCTYPE html><html lang="en" class="scroll-smooth"><head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; object-src 'none'; base-uri 'self'; frame-ancestors 'none'; upgrade-insecure-requests">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
   <title>EQLabs.ai — Request a demo</title>
-  <meta name="description" content="Request a demo of EQLabs' deterministic LLM evaluation benchmark." />
-  <meta property="og:title" content="EQLabs.ai — Request a demo" />
-  <meta property="og:description" content="See how deterministic evaluation can improve LLM reasoning quality." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="/og-image.png" />
-  <link rel="icon" href="/favicon.ico" />
+  <meta name="description" content="Request a demo of EQLabs.ai’s deterministic LLM evaluation benchmark and tools. See how grounded metrics improve LLM reasoning quality.">
+  <meta property="og:title" content="EQLabs.ai — Request a demo">
+  <meta property="og:description" content="See how deterministic evaluation can improve LLM reasoning quality.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://eqlabs.ai/og-image.png">
+  <link rel="icon" href="/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="/scripts/monitor.js" defer=""></script>
+  <script src="/scripts/gate.js" defer=""></script>
 </head>
 
 <body class="bg-white text-slate-900 antialiased selection:bg-black/10">
@@ -41,25 +41,29 @@
         deterministic evaluation benchmark and research tools.</p>
 
       <form id="demoForm" name="demo" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/demo-thanks.html" class="mt-8 space-y-4" onsubmit="return submitDemo(event)">
-        <input type="hidden" name="form-name" value="demo" />
+        <input type="hidden" name="form-name" value="demo">
         <div class="hidden">
-          <label>Don’t fill this out: <input name="bot-field" /></label>
+          <label>Don’t fill this out: <input name="bot-field"></label>
         </div>
         <div>
           <label for="name" class="block text-sm text-slate-600">Name</label>
-          <input id="name" name="name" required class="mt-1 w-full rounded-lg border border-slate-300 px-3 py-2" />
+          <input id="name" name="name" required="" class="mt-1 w-full rounded-lg border border-slate-300 px-3 py-2">
         </div>
         <div>
           <label for="email" class="block text-sm text-slate-600">Work email</label>
-          <input id="email" name="email" type="email" required class="mt-1 w-full rounded-lg border border-slate-300 px-3 py-2" />
+          <input id="email" name="email" type="email" required="" class="mt-1 w-full rounded-lg border border-slate-300 px-3 py-2">
         </div>
         <div>
           <label for="org" class="block text-sm text-slate-600">Organization</label>
-          <input id="org" name="org" class="mt-1 w-full rounded-lg border border-slate-300 px-3 py-2" />
+          <input id="org" name="org" class="mt-1 w-full rounded-lg border border-slate-300 px-3 py-2">
         </div>
         <div>
           <label for="use" class="block text-sm text-slate-600">Primary use case</label>
           <textarea id="use" name="use" rows="4" class="mt-1 w-full rounded-lg border border-slate-300 px-3 py-2"></textarea>
+        </div>
+        <div class="flex items-start gap-2">
+          <input id="privacy-consent" name="privacy-consent" type="checkbox" required="">
+          <label for="privacy-consent" class="text-sm text-slate-600">I agree to the <a class="underline" href="/terms.html" target="_blank" rel="noopener">Terms</a> and acknowledge the <a class="underline" href="/privacy.html" target="_blank" rel="noopener">Privacy Policy</a>.</label>
         </div>
         <div class="pt-2 flex items-center gap-3">
           <button type="submit" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">Request demo</button>
@@ -73,11 +77,13 @@
 
   <footer class="py-12 border-t border-slate-200">
     <div class="mx-auto max-w-6xl px-4 flex flex-col md:flex-row items-center justify-between gap-4 text-sm text-slate-600">
-      <div>&copy; <span id="y"></span> EQLabs.ai — The Equator Intelligence Lab</div>
+      <div>© <span id="y"></span> EQLabs.ai — The Equator Intelligence Lab</div>
       <div class="flex items-center gap-4">
         <a class="hover:underline" target="_blank" href="https://arxiv.org/abs/2501.00257">arXiv</a>
         <a class="hover:underline" target="_blank" href="https://www.linkedin.com/groups/">LinkedIn</a>
         <a class="hover:underline" href="mailto:info@eqlabs.ai">Email</a>
+        <a class="hover:underline" href="/privacy.html">Privacy</a>
+        <a class="hover:underline" href="/terms.html">Terms</a>
       </div>
     </div>
   </footer>
@@ -107,7 +113,8 @@
     }
     document.getElementById('y').textContent = new Date().getFullYear();
   </script>
-</body>
 
-</html>
 
+
+
+</body></html>
