--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
-<!doctype html>
-<html lang="en" class="scroll-smooth">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<!DOCTYPE html><html lang="en" class="scroll-smooth"><head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; object-src 'none'; base-uri 'self'; frame-ancestors 'none'; frame-src https://www.youtube.com; upgrade-insecure-requests">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
   <title>EQLabs.ai — The Equator Intelligence Lab</title>
-  <meta name="description"
-    content="EQLabs.ai builds deterministic frameworks to evaluate and improve LLM reasoning. EQUATOR Evaluator on arXiv. Founded from research and contributions by alumni of Columbia University and the Vector Institute." />
-  <meta property="og:title" content="EQLabs.ai — The Equator Intelligence Lab" />
-  <meta property="og:description" content="Deterministic evaluation of AI reasoning. EQUATOR Evaluator (arXiv)." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="/og-image.png" />
-  <link rel="icon" href="/favicon.ico" />
+  <meta name="description" content="EQLabs.ai builds deterministic evaluation frameworks to improve LLM reasoning with grounded metrics, reproducible benchmarks, and EQUATOR Evaluator.">
+  <meta property="og:title" content="EQLabs.ai — The Equator Intelligence Lab">
+  <meta property="og:description" content="Deterministic evaluation of AI reasoning. EQUATOR Evaluator (arXiv).">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://eqlabs.ai/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="canonical" href="https://eqlabs.ai/">
+  <script type="application/ld+json">{
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "EQLabs.ai — The Equator Intelligence Lab",
+    "url": "https://eqlabs.ai/",
+    "logo": "https://eqlabs.ai/favicon.ico",
+    "sameAs": [
+      "https://www.linkedin.com/groups/",
+      "https://arxiv.org/abs/2501.00257"
+    ],
+    "foundingLocation": "New York City, USA",
+    "description": "EQLabs.ai builds deterministic frameworks to evaluate and improve LLM reasoning.",
+    "email": "info@eqlabs.ai"
+  }</script>
+  <link rel="icon" href="/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="/scripts/monitor.js" defer=""></script>
+  <script src="/scripts/gate.js" defer=""></script>
 </head>
 
 <body class="bg-white text-slate-900 antialiased selection:bg-black/10">
@@ -44,17 +59,15 @@
     <div class="mx-auto max-w-7xl px-4">
       <div class="grid lg:grid-cols-12 gap-10 items-center">
         <div class="lg:col-span-7">
-          <p class="text-xs uppercase tracking-wider text-slate-500">New York • Stealth</p>
+          <p class="text-xs uppercase tracking-wider text-slate-500">NYC • Stealth</p>
           <h1 class="mt-3 text-4xl md:text-6xl font-semibold leading-tight">The Equator Intelligence Lab</h1>
           <p class="mt-5 text-lg text-slate-700 max-w-2xl">A focused team of PhD researchers, engineers, and graduate
             contributors developing deterministic frameworks that make AI reasoning measurable, explainable, and
             trustworthy.</p>
           <div class="mt-8 flex flex-wrap gap-3">
-            <a href="https://arxiv.org/abs/2501.00257" target="_blank"
-              class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">Read the EQUATOR
+            <a href="https://arxiv.org/abs/2501.00257" target="_blank" rel="noopener" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">Read the EQUATOR
               paper</a>
-            <a href="#research"
-              class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium hover:border-slate-400">Explore
+            <a href="#research" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium hover:border-slate-400">Explore
               research</a>
           </div>
           <div class="mt-6 flex flex-wrap gap-2 text-xs text-slate-600">
@@ -93,8 +106,7 @@
             <p class="mt-2 text-slate-700 text-sm">A deterministic framework for evaluating open‑ended LLM reasoning
               beyond fluency bias.</p>
             <div class="mt-4 flex gap-2">
-              <a href="https://arxiv.org/abs/2501.00257" target="_blank"
-                class="rounded-full bg-black text-white px-4 py-2 text-sm">Open paper</a>
+              <a href="https://arxiv.org/abs/2501.00257" target="_blank" rel="noopener" class="rounded-full bg-black text-white px-4 py-2 text-sm">Open paper</a>
               <a href="#benchmark" class="rounded-full border border-slate-300 px-4 py-2 text-sm">Benchmark</a>
             </div>
           </div>
@@ -145,7 +157,7 @@
           <div class="mt-6">
             <h3 class="font-medium">Who we help</h3>
             <ul class="mt-2 space-y-1 text-slate-700 text-sm list-disc list-inside">
-              <li>AI labs and R&D teams building reasoning-heavy agents</li>
+              <li>AI labs and R&amp;D teams building reasoning-heavy agents</li>
               <li>Applied ML/platform teams needing reproducible LLM QA</li>
               <li>Regulated domains requiring auditable AI evaluations</li>
               <li>Academic groups running LLM research</li>
@@ -160,7 +172,7 @@
           <div class="mt-4 grid grid-cols-2 gap-3 text-sm">
             <div class="rounded-xl border border-slate-200 p-4">
               <div class="text-slate-500">Focus</div>
-              <div class="mt-1 font-medium">Reasoning & Evaluation</div>
+              <div class="mt-1 font-medium">Reasoning &amp; Evaluation</div>
             </div>
             <div class="rounded-xl border border-slate-200 p-4">
               <div class="text-slate-500">Modality</div>
@@ -185,17 +197,17 @@
       <div class="grid md:grid-cols-5 gap-10 items-start">
         <div class="md:col-span-3">
           <h2 class="text-2xl font-semibold">Research</h2>
-          <p class="mt-4 text-slate-700">Our paper, <a class="underline underline-offset-4 decoration-slate-300 hover:decoration-slate-700" target="_blank" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator</a>, formalizes a deterministic approach to judge open‑ended reasoning. We prioritize <span class="font-medium">binary criteria</span>, <span class="font-medium">groundedness</span>, and <span class="font-medium">reproducibility</span>.</p>
+          <p class="mt-4 text-slate-700">Our paper, <a class="underline underline-offset-4 decoration-slate-300 hover:decoration-slate-700" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator</a>, formalizes a deterministic approach to judge open‑ended reasoning. We prioritize <span class="font-medium">binary criteria</span>, <span class="font-medium">groundedness</span>, and <span class="font-medium">reproducibility</span>.</p>
           <ul class="mt-4 space-y-3 text-slate-700 list-disc list-inside">
             <li>Deterministic scoring beyond surface fluency</li>
-            <li>Human‑validated reference sets & semantic matching</li>
+            <li>Human‑validated reference sets &amp; semantic matching</li>
             <li>Cost‑efficient local evaluators (small LLMs)</li>
           </ul>
         </div>
         <div class="md:col-span-2 rounded-2xl border border-slate-200 p-6">
           <h3 class="font-medium">Key artifacts</h3>
           <ul class="mt-3 space-y-3 text-sm">
-            <li class="flex items-center justify-between"><span>arXiv preprint</span><a class="text-slate-900 hover:underline" target="_blank" href="https://arxiv.org/abs/2501.00257">Open</a></li>
+            <li class="flex items-center justify-between"><span>arXiv preprint</span><a class="text-slate-900 hover:underline" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">Open</a></li>
             <li class="flex items-center justify-between"><span>Evaluation schema</span><a class="text-slate-900 hover:underline" href="#benchmark">View</a></li>
             <li class="flex items-center justify-between"><span>Failure taxonomy</span><a class="text-slate-900 hover:underline" href="#benchmark">View</a></li>
           </ul>
@@ -211,9 +223,9 @@
       <div class="mt-6 max-w-3xl">
         <div class="relative w-full rounded-xl overflow-hidden border border-slate-200">
           <div class="pt-[56.25%]"></div>
-          <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/ryTRe18UHXE" title="EQUATOR Evaluator Explainer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/ryTRe18UHXE" title="EQUATOR Evaluator Explainer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=ryTRe18UHXE" target="_blank" class="mt-3 inline-block text-sm text-slate-700 hover:underline">Watch on YouTube ↗</a>
+        <a href="https://www.youtube.com/watch?v=ryTRe18UHXE" target="_blank" rel="noopener" class="mt-3 inline-block text-sm text-slate-700 hover:underline">Watch on YouTube ↗</a>
       </div>
     </div>
   </section>
@@ -281,14 +293,14 @@
       <div class="rounded-2xl border border-slate-200 p-8 md:p-10">
         <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-6">
           <div>
-            <h2 class="text-2xl font-semibold">Investors & partners</h2>
+            <h2 class="text-2xl font-semibold">Investors &amp; partners</h2>
             <p class="mt-3 text-slate-700 max-w-2xl">We're pre‑seed and actively raising angel funding, partnering with teams who believe better AI starts with better measurement. If you invest in reasoning, interpretability, or AI safety, let's talk.</p>
           </div>
-          <div class="flex items-center gap-3">
-            <a href="mailto:invest@eqlabs.ai" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium">invest@eqlabs.ai</a>
-            <a href="#contact" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">Contact</a>
-            <a href="/demo.html" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">Request a demo</a>
-          </div>
+        <div class="flex items-center gap-3">
+          <a href="mailto:invest@eqlabs.ai?subject=EQLabs%20—%20Investor%20Intro&amp;body=Who%20you%20are%2C%20fund%2Fthesis%2C%20check%20size%2C%20timeline" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium">Email invest@eqlabs.ai</a>
+          <a href="/founders-circle.html" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">Founders Circle</a>
+          <a href="/demo.html" class="rounded-full border border-slate-300 px-5 py-3 text-sm font-medium">Request a demo</a>
+        </div>
         </div>
         <div class="mt-6 grid md:grid-cols-3 gap-3 text-sm">
           <div class="rounded-xl border border-slate-200 p-4">
@@ -302,6 +314,20 @@
           <div class="rounded-xl border border-slate-200 p-4">
             <div class="text-slate-500">Evidence</div>
             <div class="mt-1 font-medium">arXiv + blind studies</div>
+          </div>
+        </div>
+        <div class="mt-6 grid md:grid-cols-3 gap-3 text-sm">
+          <div class="rounded-xl border border-slate-200 p-4">
+            <div class="text-slate-500">Round</div>
+            <div class="mt-1 font-medium">Pre-seed (angels/strategics)</div>
+          </div>
+          <div class="rounded-xl border border-slate-200 p-4">
+            <div class="text-slate-500">Use of funds</div>
+            <div class="mt-1 font-medium">Benchmark growth, infra, pilots</div>
+          </div>
+          <div class="rounded-xl border border-slate-200 p-4">
+            <div class="text-slate-500">Timeline</div>
+            <div class="mt-1 font-medium">Intros this month</div>
           </div>
         </div>
         <div class="mt-6 rounded-xl border border-slate-200 p-6">
@@ -328,8 +354,8 @@
           <ul class="mt-4 space-y-2 text-slate-700">
             <li><span class="text-slate-500">Email:</span> <a class="hover:underline" href="mailto:info@eqlabs.ai">info@eqlabs.ai</a></li>
             <li><span class="text-slate-500">Investors:</span> <a class="hover:underline" href="mailto:invest@eqlabs.ai">invest@eqlabs.ai</a></li>
-            <li><span class="text-slate-500">Paper:</span> <a class="hover:underline" target="_blank" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator (arXiv)</a></li>
-            <li><span class="text-slate-500">Community:</span> <a class="hover:underline" href="https://www.linkedin.com/groups/" target="_blank">LinkedIn Research Group</a></li>
+            <li><span class="text-slate-500">Paper:</span> <a class="hover:underline" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator (arXiv)</a></li>
+            <li><span class="text-slate-500">Community:</span> <a class="hover:underline" href="https://www.linkedin.com/groups/" target="_blank" rel="noopener">LinkedIn Research Group</a></li>
           </ul>
         </div>
         <div class="rounded-2xl border border-slate-200 p-6">
@@ -344,16 +370,18 @@
 
   <footer class="py-12 border-t border-slate-200">
     <div class="mx-auto max-w-6xl px-4 flex flex-col md:flex-row items-center justify-between gap-4 text-sm text-slate-600">
-      <div>&copy; <span id="y"></span> EQLabs.ai — The Equator Intelligence Lab</div>
+      <div>© <span id="y"></span> EQLabs.ai — The Equator Intelligence Lab</div>
       <div class="flex items-center gap-4">
-        <a class="hover:underline" target="_blank" href="https://arxiv.org/abs/2501.00257">arXiv</a>
-        <a class="hover:underline" href="https://www.linkedin.com/groups/" target="_blank">LinkedIn</a>
+        <a class="hover:underline" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">arXiv</a>
+        <a class="hover:underline" href="https://www.linkedin.com/groups/" target="_blank" rel="noopener">LinkedIn</a>
         <a class="hover:underline" href="mailto:info@eqlabs.ai">Email</a>
+        <a class="hover:underline" href="/privacy.html">Privacy</a>
+        <a class="hover:underline" href="/terms.html">Terms</a>
       </div>
     </div>
   </footer>
 
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
-</body>
 
-</html>
+
+</body></html>
